tests/expectations/compiler/function/self_fail.out
Error [EPAR0370047]: Unsupported special access
    --> compiler-test:4:16
     |
   4 |         return self.foo == addr;
     |                ^^^^^^^^
